--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">QMUL_Smart_Ampoule_Checker</string>
+    <string name="app_name">Smart Ampoule Checker</string>
 </resources>
